--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_SALON_NAME = 'Sample Salon'
 REACT_APP_DISABLE_SIGN_UP=1
-REACT_APP_API = http://localhost:5000
+REACT_APP_API = http://192.168.116.222:5000
